@@ -18,6 +18,14 @@ Changes that could break older environments:
 
 * Some loopholes in the immutability rule have been closed. It is no longer
   possible to overwrite a property using tasks like <available> or <condition>.  
+  
+* Taskwriters please note: Whenever tasks had any overloaded set* methods,
+  Ant's introspection mechanism would select the last overloaded method
+  provided to it by the Java Runtime.  A modification has now been made such 
+  that when the Java Runtime provides a method with a String as its argument, 
+  a check is made to see if there is another overloaded method that takes in
+  some other type of argument.  If there is one such method, then the method 
+  that takes in String as an argument is not selected by the Introspector.
 
 Fixed bugs:
 -----------
